--- a/style.css
+++ b/style.css
@@ -31,9 +31,9 @@ header{
     padding: 20px;
     /* text-align: center; */
 }
-
 .container{
     max-width: 1280px;
+    margin: 20px auto;
     padding: 20px;
     display: flex;
     flex-direction: row;
@@ -41,7 +41,7 @@ header{
     flex-wrap: wrap;
     gap: 40px;
 }
-.hero-container{
+.main-content{
     flex: 25%;
 }
 .image-container{
@@ -77,4 +77,58 @@ a{
 img{
     width: 100%;
     height: auto;
+}
+/* CSS for LOGIN */
+.card{
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    background: var(--colorprimary);
+    margin: 40px auto;
+    border-radius: 32px;
+    padding: 20px 20px;
+
+}
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.form-group {
+    margin-bottom: 15px;
+}
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+input {
+    width: 100%;
+    padding: 8px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+button {
+    width: 100%;
+    display: inline-block;
+    padding: 10px 20px;
+    margin-top: 10px;
+    background: var(--colorsecondary2);
+    font: var(--h6);
+    font-weight: 500;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.signup-btn{
+    background: none;
+    font: var(--h6);
+    width: 100%;
+    text-align: center;
+    padding: 0;
+}
+span{
+    font-weight: 500;
+}
+.create-acc{
+    color: var(--colortertiary);
 }
