--- a/style.css
+++ b/style.css
@@ -26,10 +26,9 @@ body{
     font: var(--h6);
 }
 header{
-    background: var(--colorprimary);
+    background: none;
     /* border: 2px solid var(--colortertiary2); */
     padding: 20px;
-    /* text-align: center; */
 }
 .container{
     max-width: 1280px;
@@ -73,6 +72,7 @@ a{
 .home{
     background: none;
     padding: 0;
+    margin: 0;
 }
 img{
     width: 100%;
@@ -86,8 +86,7 @@ img{
     background: var(--colorprimary);
     margin: 40px auto;
     border-radius: 32px;
-    padding: 20px 20px;
-
+    padding: 20px;
 }
 /* On mouse-over, add a deeper shadow */
 .card:hover {
@@ -131,4 +130,13 @@ span{
 }
 .create-acc{
     color: var(--colortertiary);
+}
+/* CSS for SignUp */
+#signup{
+    margin: 0 auto;
+    padding: 20px 60px;
+}
+.colored-center{
+    background: var(--colorprimary);
+    text-align: center;
 }
