--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,20 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
+
+{% block title %}CheckMate{% endblock %}
+
+{% block header %}
+<header>
+    <a class="home" href="/"><h2>CheckMate</h2></a>
+</header>
+{% endblock %}
+
+{% block content %}
+<h1>CheckMate: Revolutionize Checking Math Exams</h1>
+<p>Capture, Grade, and Track Student Scores with Ease</p>
+<a href="/login.html">Try it now!</a>
+{% endblock %}
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -20,8 +36,5 @@
             <img src="/checkmate-removebg-preview.png" alt="">
         </div>
     </div>
-
-
-    
 </body>
-</html>
+</html> -->
