--- a/templates/index.html
+++ b/templates/index.html
@@ -11,30 +11,5 @@
 {% block content %}
 <h1>CheckMate: Revolutionize Checking Math Exams</h1>
 <p>Capture, Grade, and Track Student Scores with Ease</p>
-<a href="/login.html">Try it now!</a>
+<a href="/login">Try it now!</a>
 {% endblock %}
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CheckMate</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <a class="home" href="/index.html"><h2>CheckMate</h2></a>
-    </header>
-    <div class="container">
-        <div class="main-content">
-            <h1>CheckMate: Revolutionize Checking Math Exams</h1>
-            <p>Capture, Grade, and Track Student Scores with Ease</p>
-            <a href="/login.html">Try it now!</a>
-        </div>
-        <div class="image-container">
-            <img src="/checkmate-removebg-preview.png" alt="">
-        </div>
-    </div>
-</body>
-</html> -->
