created signup page in python flask

--- a/templates/login.html
+++ b/templates/login.html
@@ -22,6 +22,6 @@
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
     </form>
-    <a class="signup-btn" href="/signup.html"><span>Not registered yet? </span><span class="create-acc">Create an account</span></a>
+    <a class="signup-btn" href="/signup"><span>Not registered yet? </span><span class="create-acc">Create an account</span></a>
 </div>
 {% endblock %}
