--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,7 @@
         <div class="main-content">
             {% block content %}{% endblock %}
         </div>
-        <div class="image-container">
-            <img src="{{url_for('static', filename='img/checkmate-removebg-preview.png')}}" alt="">
-        </div>
+        {% block image %}{% endblock %}
     </div>
     {% block body %}{% endblock %}
 </body>
