created create key page

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,8 +9,8 @@
 {% block content %}
 <ul>
     <li><a class="btn-group" href="">Check Exams</a></li>
-    <li><a class="btn-group" href="">Create Answer Key</a></li>
+    <li><a class="btn-group" href="/create-key">Create Answer Key</a></li>
     <li><a class="btn-group" href="">View Student Records</a></li>
-    <li><a class="btn-group" href="/">Logout</a></li>
+    <li><a class="btn-group" href="/login">Logout</a></li>
 </ul>
 {% endblock %}
