--- a/static/css/style.css
+++ b/static/css/style.css
@@ -84,9 +84,10 @@ img{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     background: var(--colorprimary);
-    margin: 40px auto;
+    margin: 20px auto;
     border-radius: 32px;
     padding: 20px;
+    width:fit-content;
 }
 /* On mouse-over, add a deeper shadow */
 .card:hover {
@@ -102,10 +103,11 @@ label {
 }
 input {
     width: 100%;
-    padding: 20px;
+    padding: 10px;
     box-sizing: border-box;
     border: 1px solid #ccc;
     border-radius: 4px;
+    font: var(--p);
 }
 button {
     width: 100%;
@@ -146,7 +148,105 @@ ul{
     margin: 0;
     padding: 0;
     overflow: hidden;
+    text-align: center;
 }
 li{
     text-align: center;
+    /* display: inline-block; */
+}
+/* CSS for Check Exam Page */
+.btn-group{
+    width: 100%;
+    /* display: inline-block; */
+    background: var(--colorsecondary);
+    color: var(--colortertiary2);
+    padding: 10px 20px;
+    border-radius: 32px;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    margin-top: 20px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+}
+.check-stud{
+    display: inline-block;
+    /* padding: 8px; */
+}
+textarea{
+    width: 100%;
+    height: 100px;
+    padding: 20px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font: var(--p);
+}
+
+input::placeholder,
+textarea::placeholder {
+  color: var(--colortertiary2);
+  font: var(--p);
+  font-style: italic;
+}
+.form-group {
+    margin-bottom: 20px;
+    padding: 10px;
+    /* border: 1px solid #ccc; */
+}
+#answerKeyForm {
+    display: none;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-toggle {
+    background: var(--colorsecondary);
+    /* color: white; */
+    padding: 10px 20px;
+    /* border: 1px solid var(--colortertiary); */
+    /* cursor: pointer; */
+    border-radius: 32px;
+}
+
+.dropdown-toggle:hover {
+    background: var(--colorsecondary2);
+    color: var(--colortertiary);
+}
+
+.dropdown-menu {
+    display: none;
+    /* position: absolute; */
+    /* background-color: white; */
+    /* box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); */
+    /* min-width: 160px; */
+    z-index: 1;
+    /* margin: 10px auto; */
+    /* align-items: center; */
+}
+
+.dropdown-menu a {
+    /* color: var(--colorprimary); */
+    background: var(--colorsecondary);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font: var(--h6);
+}
+
+.dropdown-menu a:hover {
+    background: var(--colorsecondary2);
+    color: var(--colortertiary);
+    font: var(--h6);
+}
+#droplist{
+    width: 30%;
+    text-align: center;
+    border: 1px solid #ddd;
+    padding: 20px;
+    transition: height 0.3s ease;
+    overflow: hidden;
 }
