--- a/templates/login.html
+++ b/templates/login.html
@@ -14,11 +14,11 @@
     <form action="#" method="post">
         <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" class="form-control" id="username" name="username" required>
+            <input type="text" class="form-control" id="username" name="username" placeholder="Enter Username" required>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" name="password" required>
+            <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password" required>
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
     </form>
