--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,15 +15,15 @@
     <form action="#" method="post">
         <div class="form-group">
             <label for="firstname">First Name</label>
-            <input type="text" class="form-control" id="firstname" name="firstname" required>
+            <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Enter First Name" required>
             <label for="lastname">Last Name</label>
-            <input type="text" class="form-control" id="lastname" name="lastname" required>
+            <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Enter Last Name" required>
             <label for="username">Username</label>
-            <input type="text" class="form-control" id="username" name="username" required>
+            <input type="text" class="form-control" id="username" name="username" placeholder="Enter Username" required>
             <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" name="password" required>
+            <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password" required>
             <label for="password">Confirm Password</label>
-            <input type="password" class="form-control" id="confirm-password" name="confirm-password" required>
+            <input type="password" class="form-control" id="confirm-password" name="confirm-password" placeholder="Confirm Password" required>
         </div>                
         <button type="submit">Signup</button><br>
     </form>
