added scan test page and modify to dropdown the create key page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -109,6 +109,14 @@ input {
     border-radius: 4px;
     font: var(--p);
 }
+select {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font: var(--p);
+}
 button {
     width: 100%;
     display: inline-block;
