--- a/templates/check-exam.html
+++ b/templates/check-exam.html
@@ -8,7 +8,7 @@
 </header>
 {% endblock %}
 {% block content %}
-<form id="examForm" action="/submit_exam" method="POST">
+<form id="examForm" action="#" method="POST">
     <div class="card" id="droplist">
         <div class="dropdown">
             <button type="button" class="dropdown-toggle">Select Exam</button>
