--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a class="btn-group" href="/create-key">Create Answer Key</a></li>
         <li><a class="btn-group" href="/check-exam">Check Exams</a></li>
-        <li><a class="btn-group" href="">View Student Records</a></li>
+        <li><a class="btn-group" href="/view-record">View Student Records</a></li>
         <li><a class="btn-group" href="/login">Logout</a></li>
     </ul>
 </div>
