added login/signup functionality

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -270,6 +270,9 @@ table {
 }
 th, td {
     padding: 10px;
-    border: 1px solid #ccc;
-    text-align: left;
+    border: 2px solid var(--colortertiary2);
+    text-align: left; 
+}
+th{
+    background: var(--colorsecondary);
 }
