--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 {% block content %}
 <h1>CheckMate: Revolutionize Checking Math Exams</h1>
 <p>Capture, Grade, and Track Student Scores with Ease</p>
-<a href="/login">Try it now!</a>
+<a href="{{url_for('login')}}">Try it now!</a>
 {% endblock %}
 
 {% block image %}
