--- a/templates/scan-test.html
+++ b/templates/scan-test.html
@@ -4,7 +4,7 @@
 
 {% block header %}
 <header class="colored-center">
-    <a class="header" href="/home"><h2>CheckMate</h2></a>
+    <a class="header" href="{{url_for('home')}}"><h2>CheckMate</h2></a>
 </header>
 {% endblock %}
 
