--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
 {% block content %}
 <div class="card">
     <h1>Login Now</h1>
-    <form action="#" method="post">
+    <!-- <form action="#" method="post">
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" class="form-control" id="username" name="username" placeholder="Enter Username" required>
@@ -21,8 +21,14 @@
             <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password" required>
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
+    </form> -->
+    <form action="" method="POST">
+        {{ form.hidden_tag() }}
+        {{ form.username }}
+        {{ form.password }}
+        {{ form.submit }}
     </form>
-    <a class="signup-btn" href="/signup"><span>Not registered yet? </span><span class="create-acc">Create an account</span></a>
+    <a class="signup-btn" href="{{url_for('signup')}}"><span>Not registered yet? </span><span class="create-acc">Create an account</span></a>
 </div>
 {% endblock %}
 
