--- a/static/css/style.css
+++ b/static/css/style.css
@@ -119,6 +119,17 @@ select {
     border-radius: 4px;
     font: var(--p);
 }
+input[type=submit]{
+    width: 100%;
+    /* display: inline-block; */
+    padding: 0px;
+    margin-top: 10px;
+    background: var(--colorsecondary2);
+    font: var(--h6);
+    font-weight: 500;
+    border-radius: 4px;
+    cursor: pointer;
+}
 button {
     width: 100%;
     display: inline-block;
