centered scanner and make dropdown responsive

--- a/templates/scan-test.html
+++ b/templates/scan-test.html
@@ -9,9 +9,10 @@
 {% endblock %}
 
 {% block content %}
-<h1>{{ exam }}</h1>
+
 <div class="video-container">
-    <video id="video" width="640" height="480" autoplay></video>
+    <h3>{{ exam }}</h3>
+    <video id="video" autoplay></video>
     <button id="capture-btn">Capture</button>
 </div>
 <div>
