--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,7 @@
   --colortertiary2: #000000;
   --h1: bold 48px/60px var(--ff);
   --h2: normal 40px/50px var(--ff);
+  --h3: bold 33px/40px var(--ff);
   --h6: normal 19px/40px var(--ff);
   --p: light 16px/20px var(--ff);
 }
@@ -265,7 +266,7 @@ textarea::placeholder {
     font: var(--h6);
 }
 #droplist{
-    width: 30%;
+    /* width: 30%; */
     text-align: center;
     border: 1px solid #ddd;
     padding: 20px;
@@ -286,4 +287,16 @@ th, td {
 }
 th{
     background: var(--colorsecondary);
+}
+/* CSS FOR SCANNER */
+video{
+    width: 100%;
+    max-height: 600px;
+}
+.video-container{
+    margin: 0 auto;
+}
+h3{
+    text-align: center;
+    font: var(--h3);
 }
