--- a/static/css/style.css
+++ b/static/css/style.css
@@ -196,6 +196,19 @@ li{
     display: inline-block;
     /* padding: 8px; */
 }
+.check-stud button{
+    width: 100%;
+    background: var(--colorsecondary);
+    color: var(--colortertiary2);
+    padding: 10px 20px;
+    border-radius: 32px;
+    text-decoration: none;
+    font-weight: bold;
+    margin-top: 20px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+}
 textarea{
     width: 100%;
     height: 100px;
