improve camera switching

--- a/templates/scan-test.html
+++ b/templates/scan-test.html
@@ -13,6 +13,7 @@
 <div class="video-container">
     <h3>{{ exam }}</h3>
     <video id="video" autoplay></video>
+    <!-- <p id="status-msg"></p> -->
 </div>
 
 <div>
