added upload image button and a page that display it

--- a/templates/check-exam.html
+++ b/templates/check-exam.html
@@ -24,6 +24,7 @@
     <div>
         <ul>
             <li class="check-stud"><button type="submit" class="btn-group">Scan Student Answer</button></li>
+            <li class="check-stud"><a class="btn-group" href="{{url_for('upload_form')}}">Upload Image</a></li>
             <li class="check-stud"><a class="btn-group" href="{{url_for('home')}}">Exit</a></li>
         </ul>
     </div>
