--- a/templates/home.html
+++ b/templates/home.html
@@ -1,20 +1,17 @@
-{% extends 'base.html' %}
+{% extends 'home-base.html' %}
 
 {% block title %}CheckMate-Homepage{% endblock %}
-{% block header %}
-<header class="colored-center">
-    <a class="header" href="{{url_for('home')}}"><h2>CheckMate</h2></a>
-</header>
-{% endblock %}
+
 {% block content %}
-<h2>Welcome, {{ current_user.username }}!</h1>
-<p>You have successfully logged in.</p>
-<div class="card">
-    <ul>
-        <li><a class="btn-group" href="{{url_for('createKey')}}">Create Answer Key</a></li>
-        <li><a class="btn-group" href="{{url_for('checkExam')}}">Check Exams</a></li>
-        <li><a class="btn-group" href="{{url_for('viewRecord')}}">View Student Records</a></li>
-        <li><a class="btn-group" href="{{url_for('logout')}}">Logout</a></li>
-    </ul>
+<!-- <h2>Welcome, {{ current_user.username }} to CheckMate!</h2> -->
+
+<div class="jumbotron">
+    <!-- <h1 class="display-4">Welcome to Math Checker</h1> -->
+    <h1>Welcome, {{ current_user.username }} to CheckMate!</h1>
+    <p class="lead">Automate the checking of mathematics exams using OCR and NLP.</p>
+    <hr class="my-4">
+    <p>Get started by uploading an answer key or student papers.</p>
+    <a class="btn btn-outline-warning btn-lg" href="{{ url_for('createKey') }}" role="button">Upload Answer Key</a>
+    <a class="btn btn-outline-secondary btn-lg" href="{{ url_for('checkExam') }}" role="button">Upload Student Paper</a>
 </div>
 {% endblock %}
