--- a/templates/home-base.html
+++ b/templates/home-base.html
@@ -19,9 +19,8 @@
         <ul>
 
             <li><a class="active" href="{{ url_for('home') }}">Home</a></li>
-            <li><a href="{{ url_for('viewRecord') }}">Results</a></li>
-            <li><a href="#">Item Analysis</a></li>
-            <li><a href="#">Test Bank</a></li>
+            <li><a href="{{ url_for('view_results') }}">View Results</a></li>
+            <li><a href="{{ url_for('manage_test_bank') }}">Test Bank</a></li>
             <li><a href="{{ url_for('logout') }}">Logout</a></li>
         </ul>
       </nav>
