--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,6 @@
     <hr>
     <p>Get started by uploading an answer key or student papers.</p>
     <a class="btn-group" href="{{ url_for('createKey') }}" role="button">Upload Answer Key</a>
-    <a class="btn-group" href="{{ url_for('checkExam') }}" role="button">Upload Student Paper</a>
+    <a class="btn-group" href="{{ url_for('upload_student_paper') }}" role="button">Upload Student Paper</a>
 </div>
 {% endblock %}
