added name and section field in uploading student paper

--- a/templates/view_item_analysis.html
+++ b/templates/view_item_analysis.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 <h2>Item Analysis for Paper ID: {{ student_paper.id }}</h2>
+<p>Student Name: {{ student_paper.student_name }}</p>
+<p>Student Section: {{ student_paper.student_section }}</p>
 <table>
     <thead>
         <tr>
