--- a/templates/upload_student_paper.html
+++ b/templates/upload_student_paper.html
@@ -15,8 +15,16 @@
             </select>
         </div>
         <div class="form-group">
+            <label for="student_name">Student Name</label>
+            <input type="text" class="form-control" id="student_name" name="student_name" required>
+        </div>
+        <div class="form-group">
+            <label for="student_section">Student Section</label>
+            <input type="text" class="form-control" id="student_section" name="student_section" required>
+        </div>
+        <div class="form-group">
             <label for="file">Choose Student Paper Image</label>
-            <input type="file" class="form-control-file" id="file" name="file">
+            <input type="file" class="form-control-file" id="file" name="file" required>
         </div>
         <input type="submit" value="Upload">
     </form>
