--- a/templates/create-key.html
+++ b/templates/create-key.html
@@ -3,26 +3,32 @@
 {% block title %}Upload Answer Key{% endblock %}
 
 {% block content %}
-<!-- <h2>Upload Answer Key</h2>
-<form method="post" enctype="multipart/form-data">
-  <div class="form-group">
-    <label for="file">Choose Answer Key Image</label>
-    <input type="file" class="form-control-file" id="file" name="file">
-  </div>
-  <button type="submit" class="btn btn-primary">Upload</button>
-</form> -->
-
 <div class="card" id="upload-card">
     <h2>Upload Answer Key</h2>
+    
+    <!-- Flash messages -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages %}
+          <div class="alert alert-{{ category }}">
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+    
     <form method="POST" enctype="multipart/form-data">
-        <label for="name">Answer Key Name:</label>
-        <input type="text" id="name" name="name" required>
-        <br>
-        <label for="file">Choose Answer Key Image</label>
-        <input type="file" id="file" name="file" required>
-        <br>
-        <input type="submit" value="Upload">
+        <div class="form-group">
+            <label for="name">Answer Key Name:</label>
+            <input type="text" id="name" name="name" required>
+        </div>
+        <div class="form-group">
+            <label for="file">Choose Answer Key Image</label>
+            <input type="file" id="file" name="file" required>
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Upload" class="btn btn-primary">
+        </div>
     </form>
 </div>
-
 {% endblock %}
